Fixed missing padding at subpage bottom

--- a/subpage.css
+++ b/subpage.css
@@ -1,6 +1,5 @@
 .subpage {
   padding-top: 0;
-  padding-bottom: 0;
 }
 
 .subpage .section-title {
